ISPN-3444 Add support for LevelDB cache store