@@ -45,6 +45,7 @@
       <server3.dist>${ispnserver.project.dir}/build/target/infinispan-server-${project.version}-3</server3.dist>
       <config.dir>${basedir}/src/test/resources</config.dir>
       <jvm.memory.args>-Xmx512m -XX:MaxPermSize=128m</jvm.memory.args>
+      <!--<jvm.memory.args>-Xmx512m -XX:MaxPermSize=128m -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y</jvm.memory.args>-->
       <jvm.ip.stack>-Djava.net.preferIPv4Stack=true</jvm.ip.stack>
       <server.jvm.args>${jvm.ip.stack} ${jvm.memory.args}</server.jvm.args>
    </properties>
@@ -298,6 +299,21 @@
                      </includes>
                      <systemPropertyVariables>
                         <arquillian.launch>standalone-fcs-local</arquillian.launch>
+                     </systemPropertyVariables>
+                  </configuration>
+               </execution>
+               <execution>
+                  <id>standalone-leveldb-cs-local.surefire</id>
+                  <phase>test</phase>
+                  <goals>
+                     <goal>test</goal>
+                  </goals>
+                  <configuration>
+                     <includes>
+                        <include>org/infinispan/server/test/configs/LevelDBCacheStoreConfigExampleTest.java</include>
+                     </includes>
+                     <systemPropertyVariables>
+                        <arquillian.launch>standalone-leveldb-cs-local</arquillian.launch>
                      </systemPropertyVariables>
                   </configuration>
                </execution>
